# cpp_space

./: .gitignore  CMakeLists.txt  README.md  README_CMAKE.md  edit_distance.cc
alpha/union_set/: status.cc  u  union_set.cc
attribute/: attribute_constructor.c
class/: fruit.cc  main.cc  o  orange.cc  orange.h  tree.cc  tree.h
class/demo/: fruit.h  main.cc  orange.h
class/size/: .class_size.cc.swp  c  class_size.cc
cmake_demo/: CMakeLists.txt  config.h.in  main.cc
cmake_demo/math/: CMakeLists.txt  math.cc  math.h
code_quality/status/: status.cc  status.h  test.cc
code_quality/valgrind_demos/: README.md  log  test_cases.cc
data_structure/array/: array.cc  main.cc
data_structure/char_star/: c  char_star.cc  char_star_function.cc
data_structure/link_list/: link_list.cc  link_list.h
data_structure/sstream/: sstream.cc
data_structure/string/: README.md  string.cc
deepspeed-notes/ZeRO_data_parallel_model/: README.md
deepspeed-notes/large-scale_distributed_training/: large_scale_distributed_training.md  train_history.md
deepspeed-notes/launcher/: README.md  show_time
deepspeed-notes/model_parallel_model/: README.md
deepspeed-notes/pdsh/: README.md
docker_space/: run_docker.sh
docs/: HEAD_FILE.md  README_CMAKE.md  README_regular.md  cpp_python_docs.md  git_skill.md
docs/cpp_docs/: README.md
docs/pip_docs/: README.md
docs/python_docs/: one.md
function/: anonymous_test.cc  bind_test.cc
function/call_back/: call_back_no_params.cpp  simple_call_back.cpp  simple_call_back2.cpp
function/size_function/: size_space.cc
function/std/: i  iota_demo.cc  max_elements_demo.cc
function/sys_func/: assert_test.cc  built_in.cc  macro.cc  rand_test.cc
ifdef/: macro_function_test.cc
include/: class_demo.h  code_quality.h  data_structure.h  function.h  memory_manage.h  multi_processes.h  namespace_demo.h  pointer.h  pre_compile.h  std.h  template.h  thread_demo.h
macro_demo/: ifdef_test.cc
memory_manage/: main.cc  memory_manage.cc
multi_processes/: multi_processes.cc
namespace/: main.cc  namespace_demo.cc
operator/: math_test.cc  op  operator_test.cc
pointer/: nullptr_test.cc  second_level_ptr.cc
pre_compile/: macro.cc
projects/: stream_demo.cc
projects/logger/: logger.cc  logger.h  test.cc
ptr/shared_ptr/: shared_ptr.cpp
ptr/unique_dir/: u  unique_ptr.cc
pybind_demo/: README.md  pybind_class_demo.cpp  pybind_func_demo.cpp
python_space/monkey_skills/: __getattr__.md
python_space/pkg_tools/: .setup.py.swp  README.md  setup.py
python_space/py_pkg/: README.md  setup.py
python_space/setup_tools/: README.md  setup.py
python_space/subprocess/: README.md  subprocess_demo.py
python_space/with_usage/: with_demo.py
pytorch_demo/: classifier_demo.py  data_loader.py  data_parallel.py  save_load_model.py  stn_demo.py  train_demo.py
pytorch_demo/chat-bot/: README.md  model.py  prepare_input_tensor.py  utils.py
pytorch_demo/distribute/: README.md
shell_space/: README.md
size_function/: size_space.cc
src/: main.cc
src/class/: CMakeLists.txt
src/class/demo/: main.cc  tree.h
src/code_quality/: CMakeLists.txt  README.md  collect_suppression_info.py
src/code_quality/logger/: Readme.md  print_with_color.cc  test.cc
src/code_quality/status/: status_demo.cc
src/code_quality/valgrind_demos/: README.md  my_valgrind_suppression_rule.supp  test_cases.cc
src/data_structure/: CMakeLists.txt
src/data_structure/array/: array.cc  array.h  main.cc
src/data_structure/char_star/: README.md  char_star.cc  char_star_function.cc  char_star_function.h
src/data_structure/link_list/: link_list.cc
src/data_structure/sstream/: sstream.cc
src/data_structure/stl/: README.md  map_container.cc
src/data_structure/string/: README.md  string.cc
src/data_structure/struct/: README.md  c_struct_demo.c
src/func/: CMakeLists.txt  anonymous_test.cc  bind_test.cc
src/func/call_back/: call_back_no_params.cpp  simple_call_back.cpp  simple_call_back2.cpp
src/func/size_function/: size_space.cc  size_space_2.cc
src/func/sys_func/: assert_test.cc  built_in.cc  macro.cc  math_test.cc  operator_test.cc  rand_test.cc
src/memory_manage/: CMakeLists.txt  main.cc  memcpy.cc  memcpy.h  memory_manage.cc  memory_manage.h
src/memory_manage/compile/: start.c
src/multi_processes/: CMakeLists.txt  multi_processes.cc
src/multi_processes/inter_process_communication/: IPC.md  process_func.md
src/multi_processes/inter_process_communication/pipe/: pipe_commu.cc
src/multi_processes/inter_process_communication/socket/: client.cc  server.cc
src/namespace/: CMakeLists.txt  namespace_demo.cc
src/pointer/: CMakeLists.txt  README.md  nullptr_test.cc  second_level_ptr.cc
src/pointer/intrusive_ptr/: README.md  main_demo.cc  process_data.h  reference_counter.h
src/pointer/shared_ptr/: shared_ptr.cpp
src/pointer/unique_ptr/: unique_ptr.cc
src/pre_compile/: CMakeLists.txt  README.md  ifdef_test.cc  macro.cc
src/std/: CMakeLists.txt
src/std/attribute/: attribute.md  attribute_aligned.cc
src/std/attribute/register_strategy/: README.md  attribute_constructor.c  print.c
src/std/key_word/: README.md  const.cc  constexpr.cc  constexpr.md  size_t_demo.cc
src/std/key_word/variable/: README.md  val.cc
src/std/std_function/: README.md  accumulate_demo.cc  bind.cc  iota_demo.cc  max_elements_demo.cc
src/template/: CMakeLists.txt
src/template/class/: template_class.cc
src/template/func/: template_function.cc
src/thread/: CMakeLists.txt  README.md  async.cc  condition_variable.cc  dead_lock.cc  lazy_initialization.cc  mutex_function.cc  packaged_task.cc  print_star.cc  sleep.cc  thread_constructor.cc  thread_function.cc  unique_lock.cc
sstream/: sstream.cc
stl/: map_container.cc
sys_func/: README.md  assert_test.cc  operator_test.cc
template/: README.md
thread/: .simple_thread.cc.swp  async.cc  condition_variable.cc  dead_lock.cc  lazy_initialization.cc  mutex_function.cc  packaged_task.cc  print_star.cc  s  simple_thread.cc  sleep.cc  t  thread.cc  thread_constructor.cc  thread_function.cc  unique_lock.cc
(+94 files in other folders)
